--- a/ui/src/app/editor-v2/dialog/customize/customize.component.html
+++ b/ui/src/app/editor-v2/dialog/customize/customize.component.html
@@ -16,3 +16,47 @@
   ~
   -->
 
+<div class="dialog-container">
+    <div class="mat-dialog-content">
+        <div fxFlex="100" fxLayout="column">
+            <div style="height:100px;border-bottom:1px solid #ccc;padding-left:10px;padding-right:10px;background-color:#f6f6f6">
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="end end">
+                    <mat-slide-toggle [(ngModel)]="showDocumentation" aria-label="Switch 1"
+                                      [disabled]="!pipelineElement.payload.includesAssets">
+                        Show documentation
+                    </mat-slide-toggle>
+                    <mat-slide-toggle [(ngModel)]="displayRecommended" aria-label="Switch 1">
+                        Show only recommended settings
+                    </mat-slide-toggle>
+                </div>
+            </div>
+            <div fxFlex="100" fxLayout="row">
+                <form name="customizeForm" flex="100">
+                    <div fxFlex="100" fxLayout="column" *ngIf="restrictedEditMode">
+                        <div fxLayout="column" class="customize-item-main-help" style="border: 2px solid #ffc400">
+                            <div class="customize-item-title-help" style="background: #ffc400;" fxFlex="100"
+                                 fxLayout="row">
+                                You can only modify things that don't affect your pipeline structure. To fully
+                                modify this element, make sure that it doesn't connect to any successors (remove
+                                outgoing connectors).
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div fxFlex="100" fxLayout="column" class="customize-section">
+
+            </div>
+        </div>
+    </div>
+
+    <div class="mat-dialog-actions">
+        <mat-divider style="margin-bottom:10px;"></mat-divider>
+        <button mat-button mat-raised-button color="primary" (click)="save()" style="margin-right:10px;">
+            Save
+        </button>
+        <button mat-button mat-raised-button class="mat-basic" (click)="close()">
+            Cancel
+        </button>
+    </div>
+</div>
