--- a/ui/src/app/editor-v2/dialog/panel/panel-dialog.component.html
+++ b/ui/src/app/editor-v2/dialog/panel/panel-dialog.component.html
@@ -16,8 +16,14 @@
   ~
   -->
 
-<div style="display:flex;justify-content:space-between;padding:0.5rem;width:100%">
-    <span class="dialog-title">{{ dialogTitle }}</span>
-    <button mat-button mat-icon-button (click)="closeDialog()"><i class="material-icons">clear</i></button>
+<div fxFlex="100" fxLayout="column">
+    <div class="dialog-panel-header">
+        <span class="dialog-title">{{ dialogTitle }}</span>
+        <button mat-button mat-icon-button (click)="closeDialog()">
+            <i class="material-icons" style="font-size:30px;">clear</i>
+        </button>
+    </div>
+    <div class="dialog-panel-content">
+        <ng-template cdkPortalOutlet #portal></ng-template>
+    </div>
 </div>
-<ng-template cdkPortalOutlet #portal></ng-template>
