--- a/ui/src/app/data-explorer-v2/components/widgets/utils/select-properties/select-properties.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/utils/select-properties/select-properties.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<mat-form-field appearance="outline">
+<mat-form-field appearance="outline" class="sp_form_field_wrapper">
     <mat-label>Select Columns</mat-label>
     <mat-select [ngModel]="this.selectedProperties" (selectionChange)="triggerSelectedProperties($event.value)" multiple>
         <mat-option *ngFor="let column of availableProperties" [value]="column" style="background-color: #FFFFFF">
