--- a/ui/src/app/connect/static-properties/static-alternatives/static-alternatives.component.html
+++ b/ui/src/app/connect/static-properties/static-alternatives/static-alternatives.component.html
@@ -50,7 +50,7 @@
 
                 <div class="sp-blue-border" style="padding-top: 0px; padding-bottom: 0px;
                                                    padding-left: 10px; padding-right: 10px">
-                    <app-static-property [adapterId]="adapterId" [eventSchema]="eventSchema"
+                    <app-static-property [adapterId]="adapterId" [eventSchemas]="eventSchemas"
                                          [staticProperty]="alternative.staticProperty" (validateEmitter)="valueChange($event)"
                                          class="test fullWidth">
                     </app-static-property>
