--- a/ui/src/app/editor-v2/dialog/panel/panel-dialog.component.html
+++ b/ui/src/app/editor-v2/dialog/panel/panel-dialog.component.html
@@ -19,8 +19,8 @@
 <div fxFlex="100" fxLayout="column">
     <div class="dialog-panel-header">
         <span class="dialog-title">{{ dialogTitle }}</span>
-        <button mat-button mat-icon-button (click)="closeDialog()">
-            <i class="material-icons" style="font-size:30px;">clear</i>
+        <button mat-button mat-icon-button (click)="close()">
+            <i class="material-icons" style="font-size:25px;color:white;">clear</i>
         </button>
     </div>
     <div class="dialog-panel-content">
