- image container show loading spinner and notify child if it's drawing - image labeling does not allow change image while container is drawing

--- a/ui/src/app/core-ui/image/components/image-container/image-container.component.html
+++ b/ui/src/app/core-ui/image/components/image-container/image-container.component.html
@@ -16,5 +16,6 @@
   ~
   -->
 <div class="canvas-container">
+    <mat-spinner *ngIf="isDrawingVar" [diameter]="40" style="position: fixed"></mat-spinner>
     <div id="canvas-container"  (dblclick)="dblclick($event)"></div>
 </div>
