--- a/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
+++ b/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
@@ -58,7 +58,8 @@
                         (mouseUpLeft)="handleMouseUpLeft($event[0], $event[1], $event[2], $event[3])"
                         (shortCut)="handleImageViewShortCuts($event)"
                         (dbclick)="handleImageViewDBClick($event[0], $event[1], $event[2])"
-                        (mouseDownRight)="handleMouseDownRight($event[0], $event[1], $event[2])">
+                        (mouseDownRight)="handleMouseDownRight($event[0], $event[1], $event[2])"
+                        (isDrawing)="handleIsDrawing($event)">
                 </sp-image-container>
             </div>
 
