--- a/ui/src/app/editor-v2/dialog/customize/customize.component.scss
+++ b/ui/src/app/editor-v2/dialog/customize/customize.component.scss
@@ -16,24 +16,10 @@
  *
  */
 
-import {NgModule} from '@angular/core';
-import {TsonLdSerializerService} from './tsonld-serializer.service';
-import {PipelineTemplateService} from './apis/pipeline-template.service';
-import {PipelineElementService} from "./apis/pipeline-element.service";
-import {PipelineService} from "./apis/pipeline.service";
-import {PlatformServicesCommons} from "./apis/commons.service";
+@import '../../../../scss/sp/sp-dialog.scss';
 
-@NgModule({
-  imports: [],
-  declarations: [],
-  providers: [
-    PlatformServicesCommons,
-    TsonLdSerializerService,
-    PipelineTemplateService,
-    PipelineElementService,
-    PipelineService
-  ],
-  entryComponents: []
-})
-export class PlatformServicesModule {
+.customize-section {
+    display:flex;
+    flex: 1 1 auto;
+    padding: 20px;
 }
