--- a/ui/src/scss/sp/dialog.scss
+++ b/ui/src/scss/sp/dialog.scss
@@ -16,6 +16,8 @@
  *
  */
 
+@import '../variables';
+
 .sp-no-padding-dialog .mat-dialog-container {
   box-shadow: 0 11px 15px -7px rgba(0,0,0,.2), 0 24px 38px 3px rgba(0,0,0,.14), 0 9px 46px 8px rgba(0,0,0,.12);
   display: block;
