--- a/ui/src/app/editor-v2/dialog/customize/customize.component.html
+++ b/ui/src/app/editor-v2/dialog/customize/customize.component.html
@@ -16,8 +16,8 @@
   ~
   -->
 
-<div class="dialog-container">
-    <div class="mat-dialog-content">
+<div class="sp-dialog-container">
+    <div class="sp-dialog-content">
         <div fxFlex="100" fxLayout="column">
             <div style="border-bottom:1px solid #ccc;padding:10px;background-color:#f6f6f6">
                 <div fxFlex="100" fxLayout="row" fxLayoutAlign="end end">
@@ -53,9 +53,8 @@
             </div>
         </div>
     </div>
-
-    <div class="mat-dialog-actions">
-        <mat-divider style="margin-bottom:10px;"></mat-divider>
+    <mat-divider></mat-divider>
+    <div class="sp-dialog-actions">
         <button mat-button mat-raised-button color="primary" (click)="save()" style="margin-right:10px;">
             Save
         </button>
