--- a/ui/src/app/editor-v2/dialog/save-pipeline/save-pipeline.component.html
+++ b/ui/src/app/editor-v2/dialog/save-pipeline/save-pipeline.component.html
@@ -16,8 +16,8 @@
   ~
   -->
 
-<div class="dialog-container">
-    <div class="mat-dialog-content padding-20">
+<div class="sp-dialog-container">
+    <div class="sp-dialog-content padding-20">
         <div fxFlex="100" fxLayout="column">
 
         <form name="submitPipelineForm">
@@ -50,8 +50,8 @@
         </form>
         </div>
     </div>
-    <div class="mat-dialog-actions">
-        <mat-divider style="margin-bottom:10px;"></mat-divider>
+    <mat-divider></mat-divider>
+    <div class="sp-dialog-actions">
         <button mat-button mat-raised-button color="primary" (click)="savePipelineName(false)" style="margin-right:10px;">
             Save
         </button>
